# vin-cli

./: .gitignore  README.md  pyproject.toml
tests/: test_main.py
vin_cli/cli/: main.py
